// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getLayoutConfig() should match snapshot for '/' path 1`] = `
Object {
  "footer": Object {
    "display": true,
  },
  "header": Object {
    "display": true,
  },
}
`;

exports[`getLayoutConfig() should match snapshot for '/dashboard' path 1`] = `
Object {
  "footer": Object {
    "display": true,
  },
  "header": Object {
    "display": true,
  },
}
`;

exports[`getLayoutConfig() should match snapshot for '/login' path 1`] = `
Object {
  "footer": Object {
    "display": false,
  },
  "header": Object {
    "display": false,
  },
}
`;

exports[`getLayoutConfig() should match snapshot for '/logout' path 1`] = `
Object {
  "footer": Object {
    "display": true,
  },
  "header": Object {
    "display": true,
  },
}
`;

exports[`getLayoutConfig() should match snapshot for '/signup' path 1`] = `
Object {
  "footer": Object {
    "display": false,
  },
  "header": Object {
    "display": false,
  },
}
`;

exports[`getLayoutConfig() should match snapshot if invalid path 1`] = `
Object {
  "footer": Object {
    "display": true,
  },
  "header": Object {
    "display": true,
  },
}
`;
